wip progress commit

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <img src="images/logo.jpg" alt="Logo">
         </div>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">FAQ</a></li> 
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Did You Know?</a></li>
+            <li><a href="wip.html" >Home</a></li>
+            <li><a href="wip.html" >Portfolio</a></li>
+            <li><a href="wip.html" >Pricing</a></li>
+            <li><a href="wip.html" >FAQ</a></li> 
+            <li><a href="wip.html" >Careers</a></li>
+            <li><a href="wip.html" >Contact</a></li>
+            <li><a href="wip.html" >Did You Know?</a></li>
         </ul>
         <div class="enquire-now">
             <button>Enquire Now</button>
@@ -87,8 +87,8 @@
                 Australia, Singapore, Srilanka, and Thailand. Our services are mainly categorised into 
                 Candid/Artistic Photography, Wedding Film, and Traditional Photography.
             </p>
-            <a href="#">Enquire Now</a>
-            <a href="#" style="margin-left: 10px;">Make a Call</a>
+            <a href="wip.html" >Enquire Now</a>
+            <a href="wip.html"  style="margin-left: 10px;">Make a Call +91 9943573440</a>
         </div>
     </div>
 
