spell checks modified

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <img src="icons/candid-icon.png" alt="Candid Photography">
             <h3>Candid/Artistic Photography</h3>
             <p>
-                Candid Photography is just about the moments. At Focuz Studios, it's all about being Candid. 
+                Candid Photography is just about the moments. At Weddings by adhavan™, it's all about being Candid. 
                 We are trained to approach and work hard to help you relive your moments.
             </p>
         </div>
@@ -155,7 +155,7 @@
           <div>
             <ul class="recent-posts">
               <li><a href="wip.html" >Ashok & Proya Kongu Wedding...</a></li>
-              <li><a href="wip.html" >A Blissful Haldi & Sangeet Celebration –/a></li>
+              <li><a href="wip.html" >A Blissful Haldi & Sangeet Celebration </a></li>
               <li><a href="wip.html" >A Captivating Kongu Wedding Film in Sivan Convention Centr...</a></li>
             </ul>
           </div>
