added film section modification

--- a/index.html
+++ b/index.html
@@ -119,6 +119,58 @@
         </div>
     </div>
 
+    <section class="blog-section">
+        <span>Featured Wedding Post</span>
+        <h2>Read from the Blog</h2>
+        <p>My photography is about telling stories. The stories between the people, places, and details of the day.</p>
+        <div class="blog-grid">
+          <!-- Blog Item 1 -->
+          <div class="blog-item" onclick="location.href='wip.html'">
+            <div class="blog-item-container">
+              <img src="images/1.JPG" alt="Brahmin-Marwari Wedding">
+            </div>
+            <div class="content">
+              <h3>Brahmin-Marwari Wedding at RR Thoranam Mahal, Coimbatore</h3>
+              <p>Shruthi & Omkar</p>
+            </div>
+          </div>
+          <!-- Blog Item 2 -->
+          <div class="blog-item" onclick="location.href='wip.html'">
+            <div class="blog-item-container">
+              <img src="images/2.JPG" alt="A Blissful Haldi & Sangeet Celebration">
+            </div>
+            <div class="content">
+              <h3>A Blissful Haldi & Sangeet Celebration</h3>
+              <p>Shruthi & Omkar</p>
+            </div>
+          </div>
+          <!-- Blog Item 3 -->
+          <div class="blog-item" onclick="location.href='wip.html'">
+            <div class="blog-item-container">
+              <img src="images/1.JPG" alt="Tamil Brahmin Wedding">
+            </div>
+            <div class="content">
+              <h3>Brahmin Wedding Film in MLR Convention Centre, Bengaluru</h3>
+              <p>Swati & Kaushik</p>
+            </div>
+          </div>
+        </div>
+    </section>
+
+     <!-- Film Section -->
+    <section class="film-section">
+        <span>Stunning Wedding Cinematographers</span>
+        <h2>Wedding Films</h2>
+        <p>
+        Wedding film is a form documenting a wedding in an artistic way and cinematic style, a wedding we believe is like a movie. 
+        The coming together of so many beautiful things into one big happy story that is timeless. Isn't it important to capture this 
+        fairy-tale, the way it is supposed to be? Enter us in the picture, and we will take care of the rest. Wedding moments are a 
+        motion from Candid/Artistic photography. The shots are taken cinematically. The angles are coordinated extensively such that 
+        they involve a lot of cinematic film-making aspects.
+        </p>
+        <p>ts strictest definition should be the use of these cinematic techniques to enhance and elaborate the usual aspects of wedding video. It also known as Wedding highlights, wedding cinematic highlights, wedding cinematography, cinematic wedding video, cine style video, short video etc., To throw some technical jargon in, we use ultra wide-angle shots, telephoto, macro, creative shots, smooth shooting, low light shots and solid editing etc.., Yes all the magic happens here and you will love watching it again and again.</p>
+    </section>
+
     <footer>
         <div class="footer">
           <!-- Logo and Description -->
